     non-alphanumeric keys (Enter, Tab, F1-F12, etc.), especially relevant for
     assigning custom hotkeys to actions in Preferences.
   * Fixed broken Oasis terrain help entry (bug #23023)
   * Fixed hang when attempting to make a screenshot from a non-existent map via
     command-line (bug #20900)
   * Fixed cases of wrong unit type used in planning moves (bug #20299)

Version 1.12.4:
 * Security fixes:
   * Disallowed WML inclusion of .pbl files with a non-lowercase extension too
     (CVE-2015-5070, bug #23504).
 * Miscellaneous and bug fixes:
   * Removed broken Python port of wmlxgettext from data/tools/.

Version 1.12.3:
 * Security fixes:
   * Disallowed inclusion of .pbl files from WML (CVE-2015-5069, bug #23504).
 * AI:
   * Lua AI helper functions: fix bug crashing the AI when number= is not set in
     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Editor:
   * Fixed stack corruption bug in the Side Setup dialog.
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Galician, Scottish Gaelic,
     Spanish.
 * Multiplayer:
   * A New Land:
     * Removed the ability to select individual factions when using map
       settings as this breaks player recruit lists (bug #23593).
   * Removed the Silver Mage from the available leaders for the Rebels faction
     in Age of Heroes.
   * Fixed "Accept whispers from friends only" not working with the default
     lobby UI, and added a warning every 5 minutes for individual rejected
     senders.
 * User interface:
   * Fixed minimap buttons appearing without contents or in the wrong state
     during WML start events until they are interacted with or control is given
     to the player for the first time or some other unspecified thing happens.
   * Hide mod options from the user command prompt dialog in the MP lobby when
     not authenticated as a mod.