@@ -57,6 +57,7 @@ Version 1.12.4+dev:
    * Fixed hang when attempting to make a screenshot from a non-existent map via
      command-line (bug #20900)
    * Fixed cases of wrong unit type used in planning moves (bug #20299)
+   * Avoid crash when planning moves on planned recruits (bug #18637)
 
 Version 1.12.4:
  * Security fixes:
